# combined-tools-sandbox

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build_all.yml  ci.yml  ci2  ci3  create_dj_set_collection.yml  generate_summaries.yml  music_pipeline.yml  process_new_csv_files.yml  spotify_sync.yml
src/: config.py  function_usage_report.txt  get_spotify_refresh_token.py
src/core/: _google_credentials.py  drive.py  google_api.py  google_drive.py  google_sheets.py  logger.py  m3u_parsing.py  sheets.py  sheets_formatting.py  spotify.py
src/tools/core/: drive.py
src/tools/dj_set_processor/: config.py  copy_folder.py  deduplication.py  dj_set_collection.py  generate_complete_summary.py  generate_summaries.py  google_api.py  helpers.py  process_new_csv_files.py  step_0_normalize.py  step_1_move_google_sheets_by_year.py  step_2_convert_csv_to_gsheets.py  step_3_generateNextSummary.py  step_4_dedup.py  step_5_generateCompleteSummary.py  store_dedup
src/tools/live_music_history/: config.py  live_music_history.py  m3u_parsing.py  update_recent_history.py
src/tools/music_tag_sort/: config.py  drive_handler.py  (+2 more)
tests/: test_dj_set_processor.py  test_get_spotify_refresh_token.py  test_music_tag_sort.py  test_westie_radio.py
tests/core/: test_drive.py  test_google_api.py  test_google_credentials.py  test_google_drive.py  test_google_sheets.py  test_m3u_parsing.py  test_sheets.py  test_sheets_formatting.py  test_spotify.py
tests/tools/: test_helpers.py  test_music_tag_sort.py  test_rename_pipeline_mocked.py  test_renamer.py  test_sync.py
(+8 files in other folders)
